# skillopt-rs

./: .env.example  .gitignore  Cargo.toml  README.md
benches/: core.rs
configs/: demo.yaml  docvqa.yaml  livemath.yaml  searchqa.yaml
configs/skills/: demo_initial.md  livemath_initial.md  searchqa_initial.md
data/demo/train/: items.json
data/demo/valid_seen/: items.json
data/demo/valid_unseen/: items.json
data/docvqa/valid_seen/: items.json
data/docvqa/valid_unseen/: items.json
data/livemath/train/: items.json
data/livemath/valid_seen/: items.json
data/livemath/valid_unseen/: items.json
data/searchqa/train/: items.json
data/searchqa/valid_seen/: items.json
data/searchqa/valid_unseen/: items.json
src/: adapter.rs  config.rs  data.rs  gate.rs  gradient.rs  lib.rs  memory.rs  openai.rs  scheduler.rs  scoring.rs  templates.rs  types.rs
src/prompts/: full_rewrite.j2  meta_skill.j2  reflect.j2  slow_update.j2
tests/: optimizer.rs
