[package]
name = "skillopt"
version = "0.1.0"
edition = "2021"
description = "Rust port of SkillOpt: text-space optimizer for agent skills (OpenAI-compatible endpoints)"
license = "MIT"

[[bin]]
name = "skillopt-train"
path = "src/bin/train.rs"

[[bin]]
name = "skillopt-eval"
path = "src/bin/eval.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
unicode-segmentation = "1"

[profile.release]
lto = "thin"
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core"
harness = false
